--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="container">
             <h2>Catalog</h2>
             <p>Lihat katalog lengkap kami untuk menemukan peralatan audio visual yang tepat untuk acara Anda. Kami menawarkan berbagai jenis speaker, sound system, dan peralatan audio lainnya yang dapat disesuaikan dengan kebutuhan spesifik Anda.</p>
-            <a href="catalog.html" class="btn-cta">Lihat Katalog</a>
+            <a href="https://www.instagram.com/rg_audio__/" class="btn-cta">Lihat Katalog</a>
         </div>
     </div>
     <!-- Catalog Selesai -->
